src/objects/GraphicsPackImages__mdt.object
<CustomObject>
    <fields>
        <fullName>Graphic_Setting_ID__c</fullName>
        <label>Graphic Setting ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Flags</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Silk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Halloween</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robots</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FarmFresh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monsters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Graphics Pack Image</label>
    <pluralLabel>Graphics Pack Images</pluralLabel>
</CustomObject>